# apps/api/src/shared/database/schema/index.ts
@@ -15,3 +15,4 @@ export * from '../../../modules/marketplace/infrastructure/persistence/marketpla
 export * from '../../../modules/marketplace/infrastructure/persistence/marketplace-offer.schema';
 export * from '../../../modules/marketplace/infrastructure/persistence/marketplace-order.schema';
 export * from '../../../modules/marketplace/infrastructure/persistence/marketplace-review.schema';
+export * from '../../../modules/notification/infrastructure/persistence/notifications.schema';
